--- a/src/pages/_SoftwareFeature.astro
+++ b/src/pages/_SoftwareFeature.astro
@@ -37,7 +37,7 @@ const { class: className, style } = Astro.props;
     <span class="icon">
       <FontAwesomeIcon icon={faDownload} />
     </span>
-    <span class="has-text-weight-semibold">ダウンロード</span>
+    <span class="!font-semibold">ダウンロード</span>
   </button>
   <p class="is-align-self-center is-size-6">Version {APP_VERSION}</p>
 </div>
