--- a/src/pages/dormitory/[characterId]/[...descriptionType].astro
+++ b/src/pages/dormitory/[characterId]/[...descriptionType].astro
@@ -227,7 +227,7 @@ const backgroundImageUrl = `url(${(await getImage({ src: backgroundImage })).src
             </div>
           </div>
         </div>
-        <div class="link-buttons has-text-weight-bold">
+        <div class="link-buttons !font-bold">
           <a
             href={withBaseUrl(getProductPageUrl(characterInfo))}
             class="button is-normal is-rounded character-list-button"
