--- a/src/pages/dormitory/_ExplainSection.astro
+++ b/src/pages/dormitory/_ExplainSection.astro
@@ -50,7 +50,7 @@ const { showingDormitoryPageButton } = Astro.props;
       href={withBaseUrl("/")}
       class="button is-align-self-center mt-5 is-primary is-rounded"
     >
-      <span class="has-text-weight-semibold">ダウンロード</span>
+      <span class="!font-semibold">ダウンロード</span>
     </a>
   </div>
 </section>
