--- a/src/pages/dormitory/call_names/index.astro
+++ b/src/pages/dormitory/call_names/index.astro
@@ -39,7 +39,7 @@ function rgba2rgbOnWhite(
         <p>
           <a
             href={withBaseUrl("/dormitory/")}
-            class="has-text-weight-bold is-underlined">ボイボ寮</a
+            class="!font-bold is-underlined">ボイボ寮</a
           >キャラクターの呼び方一覧表です。必ずしも遵守する必要はなく、自由に改変して頂いても問題ありません。
         </p>
       </div>
