--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const landingMovieThumbUrl = (await getImage({ src: landingMovieThumb })).src;
                 }}
               />
             </div>
-            <h2 class="subtitle has-text-weight-semibold">
+            <h2 class="subtitle !font-semibold">
               無料で使える中品質なテキスト読み上げ・歌声合成ソフトウェア
             </h2>
           </div>
@@ -86,7 +86,7 @@ const landingMovieThumbUrl = (await getImage({ src: landingMovieThumb })).src;
           <p class="is-size-5">
             詳しくは&nbsp;<a
               href={withBaseUrl("/nemo/")}
-              class="has-text-weight-bold is-underlined">VOICEVOX Nemo</a
+              class="!font-bold is-underlined">VOICEVOX Nemo</a
             >&nbsp;をご参照ください。
           </p>
         </div>
@@ -107,7 +107,7 @@ const landingMovieThumbUrl = (await getImage({ src: landingMovieThumb })).src;
           <p class="is-size-5">
             詳しくは&nbsp;<a
               href="https://github.com/VOICEVOX/voicevox_core"
-              class="has-text-weight-bold is-underlined"
+              class="!font-bold is-underlined"
               target="_blank"
               rel="noreferrer">VOICEVOX CORE</a
             >&nbsp;をご参照ください。
