--- a/src/pages/nemo/index.astro
+++ b/src/pages/nemo/index.astro
@@ -55,7 +55,7 @@ const voicevoxIconImageUrl = `url(${(await getImage({ src: voicevoxIconImage }))
               <span class="icon">
                 <FontAwesomeIcon icon={faDownload} />
               </span>
-              <span class="has-text-weight-semibold">ダウンロード</span>
+              <span class="!font-semibold">ダウンロード</span>
             </button>
             <button
               {...{ [showNemoTermModalAttr]: "" }}
