--- a/src/pages/product/[characterId].astro
+++ b/src/pages/product/[characterId].astro
@@ -46,11 +46,11 @@ const description = buildDescription(characterInfo);
         }}
       >
         <div class="separator">
-          <h2 class="separator-text title is-size-2 has-text-weight-bold px-5">
+          <h2 class="separator-text title is-size-2 !font-bold px-5">
             VOICEVOX
           </h2>
         </div>
-        <h3 class="separator-text is-size-5 has-text-weight-bold mt-5">
+        <h3 class="separator-text is-size-5 !font-bold mt-5">
           無料で使える中品質なテキスト読み上げソフトウェア
         </h3>
 
