--- a/src/pages/_LinkListSection.astro
+++ b/src/pages/_LinkListSection.astro
@@ -15,30 +15,30 @@ import { isDevelopment, withBaseUrl } from "@/helper";
       <li>
         <a
           href={withBaseUrl("/dormitory/")}
-          class="has-text-weight-bold is-underlined">ボイボ寮</a
+          class="!font-bold is-underlined">ボイボ寮</a
         >
       </li>
       <li>
         <a
           href={withBaseUrl("/how_to_use/")}
-          class="has-text-weight-bold is-underlined">使い方</a
+          class="!font-bold is-underlined">使い方</a
         >
       </li>
       <li>
         <a
           href={withBaseUrl("/term/")}
-          class="has-text-weight-bold is-underlined">利用規約</a
+          class="!font-bold is-underlined">利用規約</a
         >
       </li>
       <li>
-        <a href={withBaseUrl("/qa/")} class="has-text-weight-bold is-underlined"
+        <a href={withBaseUrl("/qa/")} class="!font-bold is-underlined"
           >Q&amp;A</a
         >
       </li>
       <li>
         <a
           href={withBaseUrl("/update_history/")}
-          class="has-text-weight-bold is-underlined">変更履歴</a
+          class="!font-bold is-underlined">変更履歴</a
         >
       </li>
       {
@@ -46,7 +46,7 @@ import { isDevelopment, withBaseUrl } from "@/helper";
           <li>
             <a
               href={withBaseUrl("/news/")}
-              class="has-text-weight-bold is-underlined"
+              class="!font-bold is-underlined"
             >
               ニュース
             </a>
@@ -58,7 +58,7 @@ import { isDevelopment, withBaseUrl } from "@/helper";
           href="https://hiho.fanbox.cc/"
           target={"_blank"}
           rel={"noreferrer"}
-          class="has-text-weight-bold is-underlined">pixivFANBOX</a
+          class="!font-bold is-underlined">pixivFANBOX</a
         >
       </li>
     </ul>
