--- a/src/pages/_OssGuidanceSection.astro
+++ b/src/pages/_OssGuidanceSection.astro
@@ -31,7 +31,7 @@ const { class: className, isDark } = Astro.props;
         href="https://github.com/VOICEVOX/voicevox/blob/main/docs/%E5%85%A8%E4%BD%93%E6%A7%8B%E6%88%90.md"
         target="_blank"
         rel="noreferrer"
-        class="has-text-weight-bold is-underlined">VOICEVOX の全体構成</a
+        class="!font-bold is-underlined">VOICEVOX の全体構成</a
       >&nbsp;をご参照ください。
     </p>
     <p class="is-size-5">
