--- a/src/pages/product/_TopContainer.astro
+++ b/src/pages/product/_TopContainer.astro
@@ -83,7 +83,7 @@ const postCharacterKey =
         <p>{characterInfo.description.replaceAll("<br />", "")}</p>
         <a
           href={withBaseUrl(getDormitoryCharacterPageUrl(characterInfo))}
-          class="has-text-weight-bold has-text-black">キャラクター詳細 →</a
+          class="!font-bold has-text-black">キャラクター詳細 →</a
         >
       </div>
 
@@ -106,7 +106,7 @@ const postCharacterKey =
           <span class="icon">
             <FontAwesomeIcon icon={faDownload} />
           </span>
-          <span class="has-text-weight-semibold">
+          <span class="!font-semibold">
             <span class="is-hidden-mobile">VOICEVOX を </span>
             ダウンロード
           </span>
