--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -157,6 +157,7 @@ const googleAnalyticsSrc = `https://www.googletagmanager.com/gtag/js?id=${GA_TRA
 <style lang="scss" is:global>
   @use "@/styles/global.scss";
   @use "@/styles/bulma.scss";
+  // @import "@/styles/global.css"; // TODO: あとで導入する
 
   // ページの高さを最低でも画面の高さに合わせる
   html {
