--- a/src/pages/dev/ui/modal/library-term-intro.astro
+++ b/src/pages/dev/ui/modal/library-term-intro.astro
@@ -7,8 +7,7 @@ import {
   type CharacterKey,
 } from "@/constants/characterEntry";
 import { makeAssetsRecordSingleOptional } from "@/helper";
-import "@/styles/bulma.scss";
-import "@/styles/global.scss";
+import "@/styles/global.css";
 import type { MarkdownInstance } from "astro";
 
 export const libraryTermIntroMarkdowns = makeAssetsRecordSingleOptional(
