--- a/src/pages/dev/ui/modal/nemo-term.astro
+++ b/src/pages/dev/ui/modal/nemo-term.astro
@@ -1,8 +1,7 @@
 ---
 import { compiledContent as nemoReadmeHtml } from "@/assets/nemo-term.md";
 import { NemoTermModel } from "@/components/modal/MarkdownModals";
-import "@/styles/bulma.scss";
-import "@/styles/global.scss";
+import "@/styles/global.css";
 ---
 
 <html lang="ja">
