--- a/src/pages/dev/ui/modal/privacy-policy.astro
+++ b/src/pages/dev/ui/modal/privacy-policy.astro
@@ -1,8 +1,7 @@
 ---
 import { compiledContent as privacyPolicyHtml } from "@/assets/privacy-policy.md";
 import { PrivacyPolicyModal } from "@/components/modal/MarkdownModals";
-import "@/styles/bulma.scss";
-import "@/styles/global.scss";
+import "@/styles/global.css";
 ---
 
 <html lang="ja">
