--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,3 +1,4 @@
+// TODO: global.cssに移動済みなので、Tailwind移行完了後に削除
 @font-face {
   font-family: "Unhinted Rounded M+ 1p";
   src: url("/fonts/unhinted-rounded-mplus-1p-light.woff2");
