--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,35 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Unhinted Rounded M+ 1p";
+  src: url("/fonts/unhinted-rounded-mplus-1p-light.woff2");
+  font-weight: 300;
+  font-display: fallback;
+}
+@font-face {
+  font-family: "Unhinted Rounded M+ 1p";
+  src: url("/fonts/unhinted-rounded-mplus-1p-regular.woff2");
+  font-weight: normal;
+  font-display: fallback;
+}
+@font-face {
+  font-family: "Unhinted Rounded M+ 1p";
+  src: url("/fonts/unhinted-rounded-mplus-1p-medium.woff2");
+  font-weight: 500;
+  font-display: fallback;
+}
+@font-face {
+  font-family: "Unhinted Rounded M+ 1p";
+  src: url("/fonts/unhinted-rounded-mplus-1p-bold.woff2");
+  font-weight: bold;
+  font-display: fallback;
+}
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 @theme {
   --color-primary: #a5d4ad;
+  --font-sans: "Unhinted Rounded M+ 1p", ui-sans-serif, system-ui, sans-serif;
 }
 
 @layer base {
