--- a/src/pages/dev/ui/top-illust/index.astro
+++ b/src/pages/dev/ui/top-illust/index.astro
@@ -1,8 +1,6 @@
 ---
 import TopIllustContainer from "@/pages/dormitory/_TopIllustContainer.astro";
-import "@/styles/bulma.scss";
-import "@/styles/global.scss";
-import "@/styles/helper.scss";
+import "@/styles/global.css";
 ---
 
 <html lang="ja">
