--- a/src/pages/dormitory/_TopIllustContainer.astro
+++ b/src/pages/dormitory/_TopIllustContainer.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 const { image } = dormitoryTopIllustInfos[dormitoryTopIllustInfos.length - 1];
 ---
 
-<div class="container is-max-desktop">
+<div class="mx-auto w-full max-w-[960px]">
   <Image
     src={image}
     alt="トップイラスト"
